# pylab

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: APPBranding.cmake  FindITOM_SDK.cmake  ItomBuildMacros.cmake  ItomBuildMacrosInternal.cmake  Setup_Core.cmake  Setup_PCL_Itom.cmake
designerplugins/: CMakeLists.txt
designerplugins/evaluateGeometrics/: CMakeLists.txt
designerplugins/evaluateGeometrics/translation/: evaluateGeometrics_zh.ts
designerplugins/itom1DQwtPlot/: CMakeLists.txt
designerplugins/itom1DQwtPlot/translation/: itom1DQwtPlot_zh.ts
designerplugins/itom2DQwtPlot/: CMakeLists.txt
designerplugins/itom2DQwtPlot/translation/: itom2dQwtPlot_zh.ts
designerplugins/itomIsoGLFigurePlugin/: CMakeLists.txt
designerplugins/itomIsoGLFigurePlugin/translation/: itomIsoGLFigurePlugin_zh.ts
designerplugins/itomQwtPlotBase/: CMakeLists.txt
designerplugins/itomQwtPlotBase/translation/: itomQwtPlotBase_zh.ts
designerplugins/matplotlibPlot/: CMakeLists.txt
designerplugins/matplotlibPlot/translation/: matplotlibPlot_zh.ts
designerplugins/motorController/: CMakeLists.txt
designerplugins/motorController/translation/: motorController_zh.ts
designerplugins/plotlyPlot/: CMakeLists.txt
designerplugins/plotlyPlot/translation/: plotlyPlot_zh.ts
designerplugins/slider2D/: CMakeLists.txt
designerplugins/slider2D/translation/: slider2D_zh.ts
designerplugins/twipOGLPlugin/: CMakeLists.txt
designerplugins/twipOGLPlugin/translation/: twipOGLPlugin_zh.ts
designerplugins/vtk3dVisualizer/: CMakeLists.txt
designerplugins/vtk3dVisualizer/translation/: vtk3dVisualizer_zh.ts
plugins/: CMakeLists.txt
plugins/AVTVimba/: CMakeLists.txt  avtVimba.cpp
plugins/AVTVimba/translation/: AVTVimba_zh.ts
plugins/BasicFilters/: BasicFilters.cpp  CMakeLists.txt
plugins/BasicFilters/translation/: BasicFilters_zh.ts
plugins/DataObjectIO/: CMakeLists.txt  DataObjectIO.cpp
plugins/DataObjectIO/translation/: DataObjectIO_zh.ts
plugins/DummyGrabber/: CMakeLists.txt  DummyGrabber.cpp  DummyGrabber.h
plugins/DummyGrabber/translation/: DummyGrabber_zh.ts
plugins/DummyMotor/: CMakeLists.txt  DummyMotor.cpp
plugins/DummyMotor/translation/: DummyMotor_zh.ts
plugins/OpenCVGrabber/: CMakeLists.txt  OpenCVGrabber.cpp
plugins/actuator/: CMakeLists.txt  myActuator.cpp
plugins/dataobjectarithmetic/: CMakeLists.txt  dataobjectarithmetic.cpp
plugins/dataobjectarithmetic/translation/: dataobjectarithmetic_zh.ts
src/: CMakeLists.txt  RCa18276
src/AddInManager/: CMakeLists.txt  RCa19176
src/DataObject/: CMakeLists.txt  RCa14328  dataObjectFuncs.cpp  dataObjectFuncs.h  dataobj.h
src/PointCloud/: CMakeLists.txt
src/QPropertyEditor/: CMakeLists.txt  stringListDialog.ui
src/Qitom/: CMakeLists.txt  main.cpp  main.h  mainApplication.cpp  qitom.qrc
src/Qitom/models/: UserModel.h
src/Qitom/python/: pythonEngine.cpp  pythonEngine.h  pythonItom.cpp  pythonItom.h
src/Qitom/tools/: cvCamMainWindow.cpp  cvCamMainWindow.h  cvCamMainWindow.ui  hiMainWindow.cpp  hiMainWindow.h  hiMainWindow.ui
src/Qitom/widgets/: mainWindow.cpp  mainWindow.h  userManagementEdit.cpp  userManagementEdit.ui
src/common/: CMakeLists.txt
src/commonQt/: CMakeLists.txt
src/iconThemes/: CMakeLists.txt
src/itom-packages/: itomUi.py
src/itomWidgets/: CMakeLists.txt
src/itomWidgets/ui/: rangeWidget.ui
src/plot/: CMakeLists.txt  RCa14328
src/plugins/: CMakeLists.txt
src/plugins/algorithm/: CMakeLists.txt  algoPlugin.cpp
src/plugins/grabber/: CMakeLists.txt  myGrabber.cpp
src/plugins/grabber/translation/: MyGrabberPlugin_zh.ts
src/shape/: CMakeLists.txt
